fixed elephant's head being cropped out

--- a/html/sass/style.scss
+++ b/html/sass/style.scss
@@ -89,7 +89,7 @@ p{
 .landing_container{
     width:100%;
     height:720px;
-    background: url('../images/landing.png') no-repeat center;
+    background: url('../images/landing.png') no-repeat top;
     text-align: center;
 }
 
@@ -301,9 +301,7 @@ p{
 
 
 @media (max-width: 991px) {
-    .pusher{
-        padding-top:5px;
-    }
+
 
     #menu{
         height:50px;
@@ -322,6 +320,8 @@ p{
         min-height:auto;
         margin-bottom:10px;
     }
+
+
 
     #join_us_header{
         margin-top: 0px;
@@ -345,5 +345,17 @@ p{
 @media (max-width: 750px) {
     #landing_logo{
         margin-top:140px;
+    }
+
+    #landing_slogan{
+        padding-bottom: 50px;
+    }
+
+    .pusher{
+        padding-top:5px;
+    }
+
+    .landing_container{
+        height:auto;
     }
 }
